[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["jabu <jabu@gx.ag>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher", "bevy/tonemapping_luts"]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_kira_audio = "0.15"
bevy_audio_plus = { git = "https://github.com/jabuwu/bevy_audio_plus", rev = "edcee8e0b6527296540187d93c1601f506f45291" }
bevy_egui = "0.20"
rand = { version = "0.8.3" }
lerp = { version = "0.4" }
bitflags = "1.3"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
enum-map = { version = "2.5.0", features = [ "serde" ] }
ron = "0.8"
serde_json = "1.0.95"
anyhow = "1.0"

# note: bevy_spine is on Cargo! but this game jam required some changes...
bevy_spine = { path = "crates/bevy_spine", features = [ "workaround_5732" ] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
